// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ModalOverlayText correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Lato-Regular",
        "fontSize": 24,
        "fontWeight": "600",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders heading1 correctly 1`] = `
<Text
  accessibilityRole="header"
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 24,
        "fontWeight": "800",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders heading2 correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
/>
`;

exports[`renders paragraph correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#556572",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
        "lineHeight": 23,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders separated correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    separated={
      Array [
        "a",
        "b",
        "c",
      ]
    }
    separator=" * "
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    a
  </Text>
  <Text
    accessibilityLabel=""
    accessible={false}
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Array [
          undefined,
          Object {
            "alignSelf": "center",
            "color": "#556572",
            "fontSize": 10,
          },
        ],
      ]
    }
  >
     * 
  </Text>
  <Text
    separated={
      Array [
        "a",
        "b",
        "c",
      ]
    }
    separator=" * "
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    b
  </Text>
  <Text
    accessibilityLabel=""
    accessible={false}
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Array [
          undefined,
          Object {
            "alignSelf": "center",
            "color": "#556572",
            "fontSize": 10,
          },
        ],
      ]
    }
  >
     * 
  </Text>
  <Text
    separated={
      Array [
        "a",
        "b",
        "c",
      ]
    }
    separator=" * "
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    c
  </Text>
</View>
`;

exports[`renders separated with one item 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    separated={
      Array [
        "a",
      ]
    }
    separator=" * "
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    a
  </Text>
</View>
`;

exports[`renders text correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders text with fontWeight bold 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
/>
`;

exports[`renders text with fontWeight semibold 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontFamily": "Lato-Regular",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "600",
      },
    ]
  }
/>
`;

exports[`renders textInput correctly 1`] = `
<TextInput
  allowFontScaling={true}
  rejectResponderTermination={true}
  style={
    Array [
      Object {
        "fontFamily": "Lato-Regular",
        "fontSize": 17,
      },
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
/>
`;
